@@ -372,12 +372,12 @@
     <!-- Keybindings for running Run menu from Lxpanel on Home + R-->
     <keybind key="W-r">
       <action name="Execute">
-        <command>lxsession-default launcher_manager</command>
+        <command>lxsession-default launcher</command>
       </action>
     </keybind>
     <keybind key="A-F2">
       <action name="Execute">
-        <command>lxsession-default launcher_manager</command>
+        <command>lxsession-default launcher</command>
       </action>
     </keybind>
     <!-- Keybindings for running Menu from Lxpanel -->
