@@ -4,6 +4,7 @@ lubuntu-default-settings (0.39.1) UNRELEASED; urgency=medium
    - Depends on xbacklight to make some shortcuts workings (LP: #1313358)
   * usr/share/lubuntu/openbox/*rc.xml
    - Fix C-F7 shortcut (LP: #1313352)
+   - Fix launcher shortcuts (LP: #1313355)
 
  -- Julien Lavergne <gilir@ubuntu.com>  Fri, 16 May 2014 16:23:54 +0200
 
